// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an empty rice grid given no character data 1`] = `
<DocumentFragment>
  <svg
    class="hanziStep"
    height="94"
    id="test"
    width="94"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      class="guideLine"
      data-testid="rice-grid-guide-nw-se"
      x1="0"
      x2="94"
      y1="0"
      y2="94"
    />
    <line
      class="guideLine"
      data-testid="rice-grid-guide-ne-sw"
      x1="94"
      x2="0"
      y1="0"
      y2="94"
    />
    <line
      class="guideLine"
      data-testid="rice-grid-guide-nn-ss"
      x1="47"
      x2="47"
      y1="0"
      y2="94"
    />
    <line
      class="guideLine"
      data-testid="rice-grid-guide-ww-ee"
      x1="0"
      x2="94"
      y1="47"
      y2="47"
    />
    <line
      class="borderLine"
      data-testid="rice-grid-border-nw-ne"
      x1="0"
      x2="94"
      y1="0"
      y2="0"
    />
    <line
      class="borderLine"
      data-testid="rice-grid-border-nw-sw"
      x1="0"
      x2="0"
      y1="0"
      y2="94"
    />
    <line
      class="borderLine"
      data-testid="rice-grid-border-ne-se"
      x1="94"
      x2="94"
      y1="0"
      y2="94"
    />
    <line
      class="borderLine"
      data-testid="rice-grid-border-sw-se"
      x1="0"
      x2="94"
      y1="94"
      y2="94"
    />
    <svg>
      <g
        transform="translate(0, 82.6171875) scale(0.091796875, -0.091796875)"
      />
    </svg>
  </svg>
</DocumentFragment>
`;

exports[`renders the active stroke a different color 1`] = `
<DocumentFragment>
  <svg
    class="hanziStep"
    height="94"
    id="test"
    width="94"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      class="guideLine"
      data-testid="rice-grid-guide-nw-se"
      x1="0"
      x2="94"
      y1="0"
      y2="94"
    />
    <line
      class="guideLine"
      data-testid="rice-grid-guide-ne-sw"
      x1="94"
      x2="0"
      y1="0"
      y2="94"
    />
    <line
      class="guideLine"
      data-testid="rice-grid-guide-nn-ss"
      x1="47"
      x2="47"
      y1="0"
      y2="94"
    />
    <line
      class="guideLine"
      data-testid="rice-grid-guide-ww-ee"
      x1="0"
      x2="94"
      y1="47"
      y2="47"
    />
    <line
      class="borderLine"
      data-testid="rice-grid-border-nw-ne"
      x1="0"
      x2="94"
      y1="0"
      y2="0"
    />
    <line
      class="borderLine"
      data-testid="rice-grid-border-nw-sw"
      x1="0"
      x2="0"
      y1="0"
      y2="94"
    />
    <line
      class="borderLine"
      data-testid="rice-grid-border-ne-se"
      x1="94"
      x2="94"
      y1="0"
      y2="94"
    />
    <line
      class="borderLine"
      data-testid="rice-grid-border-sw-se"
      x1="0"
      x2="94"
      y1="94"
      y2="94"
    />
    <svg>
      <g
        transform="translate(0, 82.6171875) scale(0.091796875, -0.091796875)"
      >
        <path
          d="M 266 534 Q 309 589 356 661 Q 384 712 411 735 Q 421 747 417 763 Q 413 778 381 804 Q 350 825 329 825 Q 308 824 317 798 Q 332 764 318 736 Q 278 640 216 553 Q 158 468 76 375 Q 64 363 62 356 Q 58 343 74 346 Q 119 356 223 483 Q 230 493 240 502 L 266 534 Z"
          style="fill: #555555;"
        />
        <path
          d="M 240 502 Q 261 433 262 403 Q 255 265 251 241 Q 244 189 229 135 Q 214 86 251 38 Q 252 35 256 32 Q 275 16 287 44 Q 302 86 302 134 Q 308 387 318 445 Q 325 473 315 484 Q 297 506 283 520 Q 276 529 266 534 C 242 552 231 531 240 502 Z"
          style="fill: #555555;"
        />
        <path
          d="M 676 454 Q 755 464 874 468 Q 934 468 941 479 Q 945 492 928 505 Q 865 548 817 529 Q 760 516 677 498 L 622 488 Q 511 469 384 447 Q 362 444 379 427 Q 412 400 452 409 Q 530 433 622 446 L 676 454 Z"
          style="fill: #dc3545;"
        />
      </g>
    </svg>
  </svg>
</DocumentFragment>
`;

exports[`renders up to the stroke index given Hanzi character data 1`] = `
<DocumentFragment>
  <svg
    class="hanziStep"
    height="94"
    id="test"
    width="94"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      class="guideLine"
      data-testid="rice-grid-guide-nw-se"
      x1="0"
      x2="94"
      y1="0"
      y2="94"
    />
    <line
      class="guideLine"
      data-testid="rice-grid-guide-ne-sw"
      x1="94"
      x2="0"
      y1="0"
      y2="94"
    />
    <line
      class="guideLine"
      data-testid="rice-grid-guide-nn-ss"
      x1="47"
      x2="47"
      y1="0"
      y2="94"
    />
    <line
      class="guideLine"
      data-testid="rice-grid-guide-ww-ee"
      x1="0"
      x2="94"
      y1="47"
      y2="47"
    />
    <line
      class="borderLine"
      data-testid="rice-grid-border-nw-ne"
      x1="0"
      x2="94"
      y1="0"
      y2="0"
    />
    <line
      class="borderLine"
      data-testid="rice-grid-border-nw-sw"
      x1="0"
      x2="0"
      y1="0"
      y2="94"
    />
    <line
      class="borderLine"
      data-testid="rice-grid-border-ne-se"
      x1="94"
      x2="94"
      y1="0"
      y2="94"
    />
    <line
      class="borderLine"
      data-testid="rice-grid-border-sw-se"
      x1="0"
      x2="94"
      y1="94"
      y2="94"
    />
    <svg>
      <g
        transform="translate(0, 82.6171875) scale(0.091796875, -0.091796875)"
      >
        <path
          d="M 266 534 Q 309 589 356 661 Q 384 712 411 735 Q 421 747 417 763 Q 413 778 381 804 Q 350 825 329 825 Q 308 824 317 798 Q 332 764 318 736 Q 278 640 216 553 Q 158 468 76 375 Q 64 363 62 356 Q 58 343 74 346 Q 119 356 223 483 Q 230 493 240 502 L 266 534 Z"
          style="fill: #555555;"
        />
        <path
          d="M 240 502 Q 261 433 262 403 Q 255 265 251 241 Q 244 189 229 135 Q 214 86 251 38 Q 252 35 256 32 Q 275 16 287 44 Q 302 86 302 134 Q 308 387 318 445 Q 325 473 315 484 Q 297 506 283 520 Q 276 529 266 534 C 242 552 231 531 240 502 Z"
          style="fill: #555555;"
        />
      </g>
    </svg>
  </svg>
</DocumentFragment>
`;
